--- a/day_4.html
+++ b/day_4.html
@@ -617,43 +617,43 @@ We’re excited to welcome our very special guests:</p>
         
         <div class="m-3 text-left card-subtitle">
           <h5>Bio</h5>
-          <p><img alt="Jessica Powell" src="/static/images/industry/jessica.jpg" title="Jessica" /></p>
-<p><strong>Jessica Powell</strong></p>
-<p><em>CEO and co-founder of AudioShake</em></p>
+          <p><img alt="Jessica Powell" src="/static/images/industry/jessica.jpg" title="Jessica" />
+<strong>Jessica Powell</strong>
+<em>CEO and co-founder of AudioShake</em></p>
 <p>Jessica Powell is the CEO and co-founder of AudioShake, a sound-splitting AI technology that makes audio more interactive, accessible, and useful. Named one of TIME’s Best Inventions, AudioShake is used widely across the entertainment industry to help give content owners greater opportunities and control over their audio.</p>
 <p>Powell spent over a decade at Google, where she sat on the company's management team, reporting into the CEO. She began her career at CISAC, the International Society of Authors and Composers in Paris. She is also an award-winning novelist and former New York Times contributing opinion writer, and her short stories and essays have been published in the New York Times, TIME, WIRED, and elsewhere.</p>
-<p><img alt="Stephen White" src="/static/images/industry/stephen.jpeg" title="Stephen White" /></p>
-<p><strong>Stephen White</strong></p>
-<p><em>Chief Product Officer at EMPIRE</em></p>
+<p><img alt="Stephen White" src="/static/images/industry/stephen.jpeg" title="Stephen White" />
+<strong>Stephen White</strong>
+<em>Chief Product Officer at EMPIRE</em></p>
 <p>Stephen is the Chief Product Officer at EMPIRE. In this role White leads all technology and product development for the company.  </p>
 <p>White has held numerous roles across the music industry for over 25 years.  Prior to joining EMPIRE White was the Chief Executive Officer at StageIt Corp.  White joined StageIt in May of 2020 and lead the company to its successful sale to VNUE.</p>
 <p>Prior to joining StageIt White was the Chief Executive and Chairman of the Board for Dubset Media Holdings. White joined Dubset as CEO in February 2015 and lead the company through a repositioning and rebranding, ultimately selling the business to PEX in February of 2020.  </p>
 <p>White served as chief executive and President at Gracenote from 2012-2014.  White held numerous roles for the company across 14 years and played a critical role in growing the company from a small start-up, focusing on music technologies and information, into a digital entertainment leader that touches millions of music and movie fans around the globe. In his role as president, White oversaw all company strategy and operations, and was responsible for growing Gracenote’s core business. </p>
 <p>Before joining Gracenote, White was the vice president of product for streaming music start-up Echo.com, which was one of the first companies to combine group content streaming and community features. Prior to Echo.com, White was a senior director and executive producer for CKS, a media consultancy based in Silicon Valley where he led teams in the creation of web properties such as the Apple online store and GM.com. He began his career as a reporter and writer. </p>
-<p><img alt="Douglas McCausland" src="/static/images/industry/doug.jpg" title="Doug McCausland" /></p>
-<p><strong>Douglas McCausland</strong></p>
-<p><em>TAC Studio Manager and Faculty Lecturer at San Francisco Conservatory of Music and Center for Computer Research in Music and Acoustics (CCRMA) at Stanford University</em></p>
+<p><img alt="Douglas McCausland" src="/static/images/industry/doug.jpg" title="Doug McCausland" />
+<strong>Douglas McCausland</strong>
+<em>TAC Studio Manager and Faculty Lecturer at San Francisco Conservatory of Music and Center for Computer Research in Music and Acoustics (CCRMA) at Stanford University</em></p>
 <p>Douglas McCausland is a composer / performer, sound designer, and digital artist whose visceral and often chaotic works explore the extremes of sound, technology, and the digital medium.</p>
 <p>As an artist, he researches and leverages the intersections of numerous technologies and creative practices, such as real-time electronic music performance with purpose-built interfaces, spatial audio, interactive systems, intermedia art, musical applications of machine-learning, experimental sound design, and hardware-hacking.</p>
 <p>Described as “Tremendously powerful, dark, and sometimes terrifying...” (SEAMUS) and “Ruthlessly visceral...” (The Wire), his works have been performed internationally at numerous festivals, including: Sonorities, SEAMUS, the San Francisco Tape Music Festival, MISE-EN Music Festival, Klingt Gut!, Sounds Like THIS!, NYCEMF, Sonicscape, and Ars Electronica. Recent honors include an award of distinction in the 2021 Prix Ars Electronica for his piece “Convergence”, winning 1st-Prize in the 2021 ASCAP/SEAMUS commission competition, and the gold-prize award for “contemporary computer music” in the Verband Deutscher Tonmeister Student 3D Audio Production Competition.</p>
 <p>Douglas is currently the Technology and Applied Composition (TAC) Studio Manager at the San Francisco Conservatory of Music. He holds a DMA in music composition from Stanford University, where he studied with Chris Chafe, Patricia Alessandrini, Jaroslaw Kapuscinski, Fernando Lopez-Lezcano, and Mark Applebaum.</p>
-<p><img alt="Tony Brooke" src="/static/images/industry/tony.jpeg" title="Tony Brooke" /></p>
-<p><strong>Tony Brooke</strong></p>
-<p><em>Independent Consultant for Music Data Companies</em></p>
-<p><a href="https://tonybrooke.com">https://tonybrooke.com/</a></p>
+<p><img alt="Tony Brooke" src="/static/images/industry/tony.jpeg" title="Tony Brooke" />
+<strong>Tony Brooke</strong>
+<em>Independent Consultant for Music Data Companies</em>
+<a href="https://tonybrooke.com">https://tonybrooke.com/</a></p>
 <p>Tony Brooke is an independent consultant, helping various music companies deliver data-driven products. He was most recently Senior Director of Product Systems at Warner Music Group, leading the team that develops the label copy systems for the major label. Before that he was Senior Product Manager at Pandora, responsible for the systems that ingest and store all the metadata, audio, and images from labels, distributors, and third-party sources. He led Pandora's project to add full credits in 2019.</p>
 <p>Tony also fixes data problems throughout the digital music value chain, and helps creators improve their data. He has been on the Board of Directors at DDEX, Co-Chair of the DDEX ERN Working Group, on the Board of the San Francisco chapter of the Recording Academy, and Chair of the chapter's Producers and Engineers Wing. He presents often at industry events and completed significant research into audiovisual data and media asset management as part of his Master's degree in Library and Information Science.</p>
 <p>He has also been an audio engineer specializing in remote multitrack recording since 1992, with over 100 releases in his discography (including two GRAMMY-nominated albums) and over 500 clients. SilentWay.com is his audio info hub with thousands of articles, links, tips, and equipment guides. Tony has worked in many stages of music creation and broadcasting as a producer, engineer, singer, FM program director, and DJ. He has lived in the San Francisco Bay Area since 1991.</p>
-<p><img alt="Heidi Trefethen" src="/static/images/industry/heidi.jpeg" title="Heidi Trefethen" /></p>
-<p><strong>Heidi Trefethen</strong></p>
-<p><em>Adjunct Professor, SF Conservatory TAC (Technology and Applied Composition) Program</em></p>
-<p><em>FOH/Monitor Engineer, SFJAZZ and Freight &amp; Salvage</em></p>
-<p><em>Co-Chair, Producer's &amp; Engineers Wing, SF Chapter and P&amp;E Advisory Group Committee Member</em></p>
+<p><img alt="Heidi Trefethen" src="/static/images/industry/heidi.jpeg" title="Heidi Trefethen" />
+<strong>Heidi Trefethen</strong>
+<em>Adjunct Professor, SF Conservatory TAC (Technology and Applied Composition) Program</em>
+<em>FOH/Monitor Engineer, SFJAZZ and Freight &amp; Salvage</em>
+<em>Co-Chair, Producer's &amp; Engineers Wing, SF Chapter and P&amp;E Advisory Group Committee Member</em></p>
 <p>Heidi Trefethen is a distinguished live and recording engineer, producer, composer, and adjunct professor at the San Francisco Conservatory. As a professional French hornist, she performs across classical, jazz and cross-over genres. Renowned for her technical and creative expertise, she brings a unique, multifaceted perspective to music production, performance and education. As chair and co-chair of the P&amp;E Wing of the Recording Academy's San Francisco chapter and the Women in the Mix P&amp;E group for several years, she has championed the rights of engineers on the P&amp;E Advisory Committee, advocating for fair treatment and equitable opportunities in the absence of a formal union. You can hear her work several times a week mixing live performances at SFJAZZ and Freight and Salvage, two of SF Bay Area's premier music venues.</p>
 <p>Her dual career as an educator and music creator deepens her understanding of the evolving role of AI in music, especially in how it can support and elevate the work of engineers, educators, and musicians. Her contributions have a significant impact both at the local level and throughout the Recording Academy at-large, shaping policy and creating pathways for the next generation of audio professionals.</p>
-<p><img alt="Anna Huang" src="/static/images/industry/anna.jpeg" title="Anna Huang" /></p>
-<p><strong>Anna Huang</strong></p>
-<p><em>Assistant Professor of Music, Assistant Professor of Electrical Engineering and Computer Science at MIT</em></p>
+<p><img alt="Anna Huang" src="/static/images/industry/anna.jpeg" title="Anna Huang" />
+<strong>Anna Huang</strong>
+<em>Assistant Professor of Music, Assistant Professor of Electrical Engineering and Computer Science at MIT</em></p>
 <p>In Fall 2024, Anna started a faculty position at Massachusetts Institute of Technology (MIT), with a shared position between Electrical Engineering and Computer Science (EECS) and Music and Theater Arts (MTA). For the past 8 years, she has been a researcher at Magenta in Google Brain and then Google DeepMind, working on generative models and interfaces to support human-AI partnerships in music making.</p>
 <p>Anna is the creator of the ML model Coconet that powered Google’s first AI Doodle, the Bach Doodle. In two days, Coconet harmonized 55 million melodies from users around the world. In 2018, she created Music Transformer, a breakthrough in generating music with long-term structure, and the first successful adaptation of the transformer architecture to music. Their ICLR paper is currently the most cited paper in music generation.</p>
 <p>Anna was a Canada CIFAR AI Chair at Mila, and continues to hold an adjunct professorship at University of Montreal. She was a judge then organizer for AI Song Contest 2020-22. Anna completed her PhD at Harvard University, master’s at the MIT Media Lab, and a dual bachelor’s at University of Southern California in music composition and CS.</p>
